# chitchat

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  CHANGELOG.md  DESIGN_DECISIONS.md  LESSONS_LEARNED.md  README.md  VibeSmith_Dynamic_Persona_Generator_GPTs_Gems.md  audit_roadmap.md  chitchat.spec  designs.md  implementation_summary.md  pyproject.toml  requirements.txt  spec.md
alembic/: env.py
alembic/versions/: 947fb5f9abf0_add_vibesmith_persona_and_dynamic_state_.py  c31a068a8668_add_8_fields_to_ai_personas.py
frontend/: index.html
frontend/css/: components.css  layout.css  variables.css
frontend/js/: api.js  app.js  store.js
frontend/js/pages/: chat.js  chat_composer.js  chat_profiles.js  chat_session.js  chat_utils.js  lorebooks.js  models.js  personas.js  prompt_order.js  providers.js  settings.js  worldbooks.js
output/chitchat/_internal/: alembic.ini
output/chitchat/_internal/keyring-25.7.0.dist-info/: RECORD
output/chitchat/_internal/python_ulid-3.1.0.dist-info/: RECORD
scripts/: build.py  build.sh  gen_locales.py
src/chitchat/: app.py  logging_config.py  main.py
src/chitchat/api/: app.py  dependencies.py
src/chitchat/api/routes/: chat.py  health.py  (+4 more)
src/chitchat/config/: paths.py  settings.py  user_preferences.py
src/chitchat/db/: engine.py  migrations.py  models.py  repositories.py
src/chitchat/domain/: chat_session.py  dynamic_state.py  ids.py  lorebook_matcher.py  profiles.py  prompt_assembler.py  prompt_blocks.py  provider_contracts.py  vibe_fill.py  vibesmith_persona.py
src/chitchat/i18n/: __init__.py  translator.py
src/chitchat/providers/: base.py  capability_mapper.py  gemini_provider.py  lmstudio_provider.py  openrouter_provider.py  registry.py
src/chitchat/secrets/: key_store.py
src/chitchat/services/: chat_service.py  dynamic_state_engine.py  profile_service.py  prompt_service.py  provider_service.py  vibe_fill_service.py
src/chitchat/ui/: async_bridge.py  main_window.py  navigation.py  theme.py
tests/: test_e2e_acceptance.py  test_first_run_smoke.py  test_i18n.py  test_lorebook_matcher.py  test_migrations.py  test_model_list.py  test_profile_crud_service.py  test_profile_validation.py  test_prompt_assembler.py  test_provider_capability_mapper.py  test_provider_connection.py  test_repository_crud.py  test_secret_storage_policy.py  test_session_state_machine.py  test_user_preferences.py  test_vibe_fill.py  test_vibe_fill_service.py
(+19 files in other folders)
