[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chitchat"
version = "1.0.0"
description = "VibeSmith-powered dynamic persona AI roleplay chat platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "SQLAlchemy>=2.0.49,<2.1",
  "alembic>=1.18.4,<1.19",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.7,<3",
  "httpx>=0.28,<0.29",
  "keyring>=25.7,<26",
  "google-genai>=1.73,<2",
  "python-ulid>=3.0,<4",
  "zstandard>=0.23,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.8,<1",
  "mypy>=1.14,<2",
  "httpx>=0.28,<0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
chitchat = ["i18n/locales/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".agents/", ".venv/", "alembic/versions/", "frontend/", "output/", "build/"]

[tool.ruff.lint]
ignore = ["E701", "E702"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
